src/App.css
body {
  background-color: #05060e;
  overflow: hidden;
}

.App {
  display: flex;
  height: 100vh;
  flex-direction: row;
}

.container {
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: row;
}

.main-scene {
  flex-grow: 1;
  overflow: auto;
  position: relative;
  /* transition: all 0.3s ease-in-out; */
}
.coord-scene {
  position: absolute;
  height: 18.5vh;
  width: 18.5vh;
}

.resizer {
  position: absolute;
  left: -5px;
  top: 0;
  bottom: 0;
  width: 10px;
  cursor: ew-resize;
  background: #191b20;
  position: absolute;
  left: -5px;
  top: 0;
  bottom: 0;
  width: 10px;
  cursor: ew-resize;
  background: #191b20;
}

.code-editor {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #191b20;
  width: auto;
  height: 100%;
}
.code-editor-container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  width: 100%;
  height: 100%;
}

.text-area-container {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  height: 50%;
  width: 100%;
  padding-bottom: 10px;
  padding-top: 10px;
}

.text-area.visible {
  display: flex;
  width: 100%;
}

.text-area {
  width: 20rem;
  height: 100%;
  resize: none;
  margin-top: 10px;
  font-size: 14px;
  font-family: Consolas, monospace;
  color: white;
  background-color: #323338;
  border: 1px solid black;
  outline: none;
  position: absolute;
  display: none;

  border: 2px solid black;
  /* tak na przyszłość: okazuje się że .text-area to dodatkowy div otaczający
    to co jest w codeMirror, za długo się pierdzieliłem z tym gdzie błąd, ale jak coś
    nie działa z CM to patrzcie tutaj raczej*/
}

.cm-editor {
  width: 100%;
}
.cm-content {
  padding: 10px;
}
.cm-scroller {
  overflow: auto;
}
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}
::-webkit-scrollbar-track {
  background: #282c34;
}
::-webkit-scrollbar-thumb {
  background: #888;
}
::-webkit-scrollbar-thumb:hover {
  background: #555;
}
::-webkit-scrollbar-corner {
  background: #282c34;
}
/* https://codemirror.net/examples/styling/ */

.code-editor button {
  margin-top: 10px;
  padding: 10px 20px;
  font-size: 16px;
  background-color: #606166;
  color: white;
  border: none;
  cursor: pointer;
  margin-top: 10px;
  padding: 10px 20px;
  font-size: 16px;
  background-color: #606166;
  color: white;
  border: none;
  cursor: pointer;
}
.control-buttons {
  display: grid;
  grid-template-columns: auto auto;
  justify-content: center;
}

.tab-button {
  margin-left: 5px;
  margin-right: 5px;
}

.tab-container {
  width: 100%;
  display: flex;
}
.tab-window {
  background-color: rgba(107, 83, 83, 0.792);
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  width: 150px;
  height: 30px;
  text-align: center;
  border-radius: 15px 0 15px 0;
  position: relative;
  font-weight: bold;
  animation: windowAnimation 1s;

  &:hover {
    cursor: pointer;
  }
}

.window-active {
  position: absolute;
  top: 100%;
  left: 0;
  border-radius: 10px 10px 0 0;
  width: calc(100% - 15px);
  height: 2px;
  background-color: green;
  animation: lineAnimation 1s;
}

.delete-icon {
  position: absolute;
  top: 0;
  right: 5px;
  width: 20px;
  height: 18px;
  color: rgb(99, 6, 6);

  &:hover {
    cursor: pointer;
    scale: 1.1;
    transition: "1s";
  }
}

.add-icon {
  color: green;
  width: 30px;
  height: 30px;
  margin-left: 3px;

  &:hover {
    cursor: pointer;
    scale: 1.1;
    transition: "1s";
  }
}

@keyframes lineAnimation {
  0% {
    left: 50%;
    width: 0;
  }

  100% {
    left: 0;
  }
}

@keyframes windowAnimation {
  0% {
    scale: 0;
  }

  100% {
    scale: 1;
  }
}

.tab-button.button-active {
  background-color: green;
  background-color: green;
}

.tab-button.button-not-empty {
  background-color: rgb(151, 151, 59);
  background-color: rgb(151, 151, 59);
}

.toggle-button {
  display: none;
}

#coord-button {
  position: absolute;
  height: 25px;

  background-color: #191b20;
  box-shadow: none;
  color: white;
  border: solid white 1px;
  border-bottom-left-radius: 0.3rem;
  border-bottom-right-radius: 0.3rem;

  font-size: 1.2vh; /* Adjust the text size based on viewport width */
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
}
#coord-button.coord-button-closed {
  border-radius: 0.3rem;
}

@media (max-width: 768px) {
  .App {
    flex-direction: column;
  }

  .container {
    flex-direction: column;
    align-items: center;
  }

  .code-editor {
    width: 100% !important;
    height: auto;
    /* transition: 0.5s; */
  }

  .main-scene {
    width: 100%;
    height: 100%;
  }
  .toggle-button {
    display: block;
  }
  .code-editor.hidden {
    transform: translateY(88%);
  }
  .text-area-container {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    height: 10rem;
    width: 100%;
    padding-bottom: 10px;
    padding-top: 10px;
  }
}

